Conteo de productos con la API
Funcion de contar en la API y funcionalidad en el index

--- a/Inventario_FrontEnd/index.html
+++ b/Inventario_FrontEnd/index.html
@@ -73,13 +73,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Scripts -->
-    <script>
-        // Simulación de datos para mostrar estadísticas
-        document.getElementById('totalProductos').textContent = 120; // Reemplazar con fetch de la API
-        document.getElementById('totalCategorias').textContent = 15; // Reemplazar con fetch de la API
-        document.getElementById('totalProveedores').textContent = 25; // Reemplazar con fetch de la API
-    </script>
+    <script src="js/resumenDatos.js"></script>
 </body>
 </html>
