--- a/Inventario_FrontEnd/agregarProductos.html
+++ b/Inventario_FrontEnd/agregarProductos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Inventario</title>
+    <title>Gestión de Productos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/agregarProductosStyle.css">
 </head>
@@ -11,14 +11,42 @@
     <!-- Encabezado -->
     <header>
         <h1>Sistema de Inventario</h1>
+
+        <!-- Barra de Navegación -->
+<!-- Barra de Navegación -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="agregarProductos.html">Gestión de Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gestionCategoria.html">Gestión de Categorías</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gestionProveedores.html">Gestión de Proveedores</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
     </header>
 
     <!-- Contenedor Principal -->
     <div class="container">
+
         <!-- Formulario para Gestión -->
         <div class="row">
             <div class="col-md-4">
-                <h2>Gestión de Productos</h2>
+                <h2 class="text-center">Gestión de Productos</h2>
                 <form id="productForm">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre del Producto</label>
@@ -57,8 +85,8 @@
 
             <!-- Tabla de Productos -->
             <div class="col-md-8">
-                <h2>Listado de Productos</h2>
-                <div class="table-container">
+                <h2 class="text-center mb-4">Listado de Productos</h2>
+                <div class="table-container mt-3">
                     <table class="table table-striped" id="productTable">
                         <thead>
                             <tr>
