--- a/Inventario_FrontEnd/index.html
+++ b/Inventario_FrontEnd/index.html
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="categorias.html">
+                <a href="gestionCategoria.html">
                     <div class="card p-4 bg-success text-white">
                         <div class="card-icon">📂</div>
                         <h5>Gestión de Categorías</h5>
@@ -64,7 +64,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="proveedores.html">
+                <a href="gestionProveedores.html">
                     <div class="card p-4 bg-warning text-white">
                         <div class="card-icon">🏢</div>
                         <h5>Gestión de Proveedores</h5>
@@ -73,6 +73,7 @@
             </div>
         </div>
     </div>
+   
     <script src="js/resumenDatos.js"></script>
 </body>
 </html>
