--- a/Inventario_FrontEnd/gestionProveedores.html
+++ b/Inventario_FrontEnd/gestionProveedores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Proveedores</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/agregarProductosStyle.css">
+    <link rel="stylesheet" href="./css/agregarProductosStyle.css">
 </head>
 <body>
     <!-- Encabezado -->
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="agregarProductos.html">Gestión de Productos</a>
