--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Sistema de Inventario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/indexStyle.css">
+    <link rel="stylesheet" href="./Inventario_FrontEnd/css/indexStyle.css">
 
 </head>
 <body>
@@ -48,7 +48,7 @@
         <!-- Navegación Rápida -->
         <div class="row nav-buttons">
             <div class="col-md-4">
-                <a href="agregarProductos.html">
+                <a href="./Inventario_FrontEnd/agregarProductos.html">
                     <div class="card p-4 bg-primary text-white">
                         <div class="card-icon">📦</div>
                         <h5>Gestión de Productos</h5>
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="gestionCategoria.html">
+                <a href="./Inventario_FrontEnd/gestionCategoria.html">
                     <div class="card p-4 bg-success text-white">
                         <div class="card-icon">📂</div>
                         <h5>Gestión de Categorías</h5>
@@ -64,7 +64,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="gestionProveedores.html">
+                <a href="./Inventario_FrontEnd/gestionProveedores.html">
                     <div class="card p-4 bg-warning text-white">
                         <div class="card-icon">🏢</div>
                         <h5>Gestión de Proveedores</h5>
@@ -74,6 +74,6 @@
         </div>
     </div>
    
-    <script src="js/resumenDatos.js"></script>
+    <script src="./Inventario_FrontEnd/js/resumenDatos.js"></script>
 </body>
 </html>
