--- a/Inventario_FrontEnd/gestionCategoria.html
+++ b/Inventario_FrontEnd/gestionCategoria.html
@@ -64,6 +64,10 @@
             <!-- Tabla de Categorías -->
             <div class="col-md-8">
                 <h2 class="text-center mb-4">Listado de Categorías</h2>
+                <!-- Campo de búsqueda -->
+    <div class="mb-3">
+        <input type="text" class="form-control" id="searchInput" placeholder="Buscar por nombre o descripción">
+    </div>
                 <div class="table-container mt-3">
                     <table class="table table-striped" id="categoryTable">
                         <thead>
