--- a/Inventario_FrontEnd/gestionProveedores.html
+++ b/Inventario_FrontEnd/gestionProveedores.html
@@ -68,6 +68,9 @@
             <!-- Tabla de Proveedores -->
             <div class="col-md-8">
                 <h2 class="text-center mb-4">Listado de Proveedores</h2>
+                <div class="mb-3">
+                    <input type="text" class="form-control" id="searchInput" placeholder="Buscar por nombre, teléfono o dirección">
+                </div>
                 <div class="table-container mt-3">
                     <table class="table table-striped" id="providerTable">
                         <thead>
