--- a/Inventario_FrontEnd/agregarProductos.html
+++ b/Inventario_FrontEnd/agregarProductos.html
@@ -6,6 +6,9 @@
     <title>Gestión de Productos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/agregarProductosStyle.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
+
 </head>
 <body>
     <!-- Encabezado -->
@@ -111,6 +114,29 @@
             </div>
         </div>
     </div>
+
+<!-- Modal de ingreso de cédula y contrasena -->
+<div class="modal fade" id="cedulaModal" tabindex="-1" aria-labelledby="cedulaModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="cedulaModalLabel">Datos</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="cedulaInput">Cédula</label>
+                <input type="text" id="cedulaInput" class="form-control" placeholder="Ingrese su cédula" />
+                
+                <label for="passwordInput" class="mt-3">Contrasena</label>
+                <input type="password" id="passwordInput" class="form-control" placeholder="Ingrese su contrasena" />
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="submitCedulaBtn" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
